--- a/README
+++ b/README
@@ -42,6 +42,7 @@ Am avut câteva ședințe de testare și debugging în comun al căror rezultate
 Submisia noastră de pe hackerrank se găsește la [2]. Link-urile de la fiecare meci în parte se vor găsi la [4].
 Ca surse de inspirație, demn de menționat este articolul de la [3].
 
+Pentru etapa 2, am considerat ca e de ajuns ce am facut pentru etapa 1.Submisia pentru etapa se gaseste la [5] Link-urile pentru meciurile de la etapa 2 se gasesc la [6].
 
 [1] https://github.com/alin-ciobanu/Tron
 [2] https://www.hackerrank.com/contests/bucharest-tron/submissions/game/623386
@@ -54,3 +55,8 @@ etc.. (se schimbă ultima cifră din link pentru a trece la meciul următor)
 https://www.hackerrank.com/showgame/2120469 - meciul 16 RandomBot
 https://www.hackerrank.com/showgame/2120470 - meciul 1 explorer
 https://www.hackerrank.com/showgame/2120485 - meciul 16 explorer
+
+[5]https://www.hackerrank.com/contests/bucharest-tron/submissions/game/634795
+
+[6]https://www.hackerrank.com/showgame/2295236 - meciul 1 cu stage2bot
+https://www.hackerrank.com/showgame/2295251 - meciul 16 cu stage2bot
